Bug 1315245 - Part 1: Don't dispatch event to AccessibleCaretEventHub when the event status is nsEventStatus_eConsumeNoDefault. r=smaug